corrección de bugs