@@ -1,35 +1,30 @@
 package org.maps;
 
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.FileReader;
-import java.io.IOException;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.io.*;
+import java.util.*;
+import java.util.stream.Collectors;
 
 public class InventoryManager {
-    
+
     private Map<String, Integer> miInventario;
     private Map<String, Category> categorias;
     private Factory.MapType tipoMap;
-    
+
     public InventoryManager(Factory.MapType mapType) {
         this.tipoMap = mapType;
         this.miInventario = Factory.createMap(mapType);
         this.categorias = new HashMap<>();
         cargarInventario();
     }
-    
+
     private void cargarInventario() {
         String[] rutasPosibles = {
-            "inventario.txt",
-            "demo/inventario.txt",
-            "src/main/java/org/maps/inventario.txt",
-            "demo/src/main/java/org/maps/inventario.txt"
+                "inventario.txt",
+                "demo/inventario.txt",
+                "src/main/java/org/maps/inventario.txt",
+                "demo/src/main/java/org/maps/inventario.txt"
         };
-        
+
         for (String ruta : rutasPosibles) {
             File file = new File(ruta);
             if (file.exists()) {
@@ -40,7 +35,7 @@ public class InventoryManager {
                         if (partes.length == 2) {
                             String nombreCategoria = partes[0].trim();
                             String nombreProducto = partes[1].trim();
-                            
+
                             if (!categorias.containsKey(nombreCategoria)) {
                                 categorias.put(nombreCategoria, new Category(nombreCategoria));
                             }
@@ -49,27 +44,27 @@ public class InventoryManager {
                     }
                     return;
                 } catch (IOException e) {
-                    System.err.println("Error al leer el archivo de inventario: " + e.getMessage());
+                    // Continúa buscando en otras rutas
                 }
             }
         }
     }
-    
+
     public boolean agregarProducto(String nombreCategoria, String nombreProducto) {
         if (!categorias.containsKey(nombreCategoria)) {
             return false;
         }
-        
+
         Category categoria = categorias.get(nombreCategoria);
         if (!categoria.containsProduct(nombreProducto)) {
             return false;
         }
-        
+
         String clave = nombreProducto + " (" + nombreCategoria + ")";
         miInventario.put(clave, miInventario.getOrDefault(clave, 0) + 1);
         return true;
     }
-    
+
     public String obtenerCategoriaProducto(String nombreProducto) {
         for (Category categoria : categorias.values()) {
             if (categoria.containsProduct(nombreProducto)) {
@@ -78,11 +73,11 @@ public class InventoryManager {
         }
         return null;
     }
-    
+
     public Map<String, Integer> obtenerInventarioUsuario() {
         return miInventario;
     }
-    
+
     public List<Map.Entry<String, Integer>> obtenerInventarioOrdenado() {
         return miInventario.entrySet().stream()
                 .sorted((e1, e2) -> {
@@ -91,19 +86,19 @@ public class InventoryManager {
                     int comparacionCat = cat1.compareTo(cat2);
                     return comparacionCat != 0 ? comparacionCat : e1.getKey().compareTo(e2.getKey());
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
-    
+
     public Map<String, Category> obtenerInventarioCompleto() {
         return categorias;
     }
-    
+
     public List<Category> obtenerInventarioCompletoOrdenado() {
         return categorias.values().stream()
                 .sorted()
-                .toList();
+                .collect(Collectors.toList());
     }
-    
+
     private String extraerCategoria(String claveProducto) {
         int ultimoParentesis = claveProducto.lastIndexOf("(");
         if (ultimoParentesis != -1) {
@@ -111,23 +106,23 @@ public class InventoryManager {
         }
         return "";
     }
-    
+
     public Map<String, Category> obtenerCategorias() {
         return categorias;
     }
-    
+
     public Category obtenerCategoria(String nombre) {
         return categorias.get(nombre);
     }
-    
+
     public Set<String> obtenerNombresCategorias() {
         return categorias.keySet();
     }
-    
+
     public int obtenerCantidadCategorias() {
         return categorias.size();
     }
-    
+
     public int obtenerTotalProductos() {
         int total = 0;
         for (Category cat : categorias.values()) {
